<resources>
    <string name="app_name">arcgis</string>
    <string name="address_search_hint">Enter address</string>
    <string name="geo_locate_error">Geocode failed on address.</string>
    <string name="location_not_found">No location with that name: </string>
    <!-- Navigation vectore URL-->
    <string name="navigation_vector">http://www.arcgis.com/sharing/rest/content/items/dcbbba0edf094eaa81af19298b9c6247/resources/styles/root.json</string>
    <string name="routing_service">http://sampleserver6.arcgisonline.com/arcgis/rest/services/NetworkAnalysis/SanDiego/NAServer/Route</string>
    <!-- Drawer strings-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="progress_title">Finding Route</string>
    <string name="progress_message">Please wait&#8230;</string>
    <string name="title_activity_maps">Map</string>
    <string name="price">Price : 99€</string>
    <string name="duration">duration : 5 min</string>
    <string name="distance">distance : 5Km</string>
    <string name="call">Call</string>
</resources>
